--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -1,50 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_authentication"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/_fon_authoriz"
+    android:background="@drawable/fon_authoriation"
     tools:context="ru.yellosoft_club.y_gpstracker.authorization">
 
     <EditText android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/et_email"
         android:hint="Password"
         android:textColorHint="@color/grey_50"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:id="@+id/et_password"
-        />
-
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_password"
-        android:layout_marginTop="20dp"
-        >
-        <Button android:layout_width="186dp"
-            android:layout_height="match_parent"
-            android:text="Вход"
-            android:id="@+id/btn_sign_in"
-            android:elevation="0dp" />
-        <Button android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Регистрация"
-            android:id="@+id/btn_registration"/>
-
-    </LinearLayout>
+        android:layout_below="@+id/et_email"
+        android:layout_centerHorizontal="true" />
 
     <EditText android:layout_width="250dp"
         android:layout_height="50dp"
         android:id="@+id/et_email"
-        android:layout_marginTop="144dp"
         android:hint="Email"
         android:textColorHint="@color/grey_50"
-        android:textSize="30dp"
+        android:textSize="20dp"
+        android:layout_marginTop="185dp"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/et_password"
         android:layout_alignStart="@+id/et_password" />
+
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:layout_below="@+id/et_password"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
+
+        <Button android:layout_width="144dp"
+            android:layout_height="match_parent"
+            android:text="Вход"
+            android:id="@+id/btn_sign_in"
+            android:elevation="0dp"
+            android:layout_weight="0.76" />
+
+        <Button android:layout_width="159dp"
+            android:layout_height="wrap_content"
+            android:text="Регистрация"
+            android:id="@+id/btn_registration"
+            android:layout_weight="0.22" />
+
+    </LinearLayout>
 
 </RelativeLayout>
