--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -6,17 +6,8 @@
     android:id="@+id/activity_authentication"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fon_authoriation"
+    android:background="@drawable/_fon_authorization"
     tools:context="ru.yellosoft_club.y_gpstracker.authorization">
-
-    <EditText android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:hint="Password"
-        android:textColorHint="@color/grey_50"
-        android:textSize="20dp"
-        android:id="@+id/et_password"
-        android:layout_below="@+id/et_email"
-        android:layout_centerHorizontal="true" />
 
     <EditText android:layout_width="250dp"
         android:layout_height="50dp"
@@ -24,31 +15,48 @@
         android:hint="Email"
         android:textColorHint="@color/grey_50"
         android:textSize="20dp"
-        android:layout_marginTop="185dp"
+        android:layout_marginTop="212dp"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/et_password"
+        android:textColor="#ffffff"
         android:layout_alignStart="@+id/et_password" />
+
+
+
+    <EditText android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:hint="Password"
+        android:textColorHint="@color/grey_50"
+        android:textSize="20dp"
+        android:id="@+id/et_password"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/et_email" />
 
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="10dp"
+        android:weightSum="1"
         android:layout_below="@+id/et_password"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:weightSum="1">
+        android:layout_marginLeft="49dp"
+        android:layout_marginStart="49dp">
 
         <Button android:layout_width="144dp"
             android:layout_height="match_parent"
             android:text="Вход"
             android:id="@+id/btn_sign_in"
             android:elevation="0dp"
-            android:layout_weight="0.76" />
+            android:layout_weight="0.19" />
+            <!--android:layout_weight="0.72" />-->
 
-        <Button android:layout_width="159dp"
+        <Button android:layout_width="137dp"
             android:layout_height="wrap_content"
             android:text="Регистрация"
             android:id="@+id/btn_registration"
-            android:layout_weight="0.22" />
+            android:layout_weight="0.14" />
+        <!-- android:layout_weight="0.05" -->
 
     </LinearLayout>
 
