--- a/app/src/main/res/layout/nav_header_main_settings.xml
+++ b/app/src/main/res/layout/nav_header_main_settings.xml
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="%EMAIL_USERS%"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:id="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView"
