--- a/app/src/main/res/layout/app_bar_main_settings.xml
+++ b/app/src/main/res/layout/app_bar_main_settings.xml
@@ -19,6 +19,17 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:text="Координаты: "
+            android:textSize="30sp"
+            android:id="@+id/textView"
+            android:layout_below="@+id/button"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main_settings" />
