--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/_fon_authorization"
+    android:background="@drawable/_fon_about"
     tools:context="ru.yellosoft_club.y_gpstracker.about">
 
 </RelativeLayout>
