--- a/app/src/main/res/layout/app_bar_main_settings.xml
+++ b/app/src/main/res/layout/app_bar_main_settings.xml
@@ -28,7 +28,8 @@
             android:id="@+id/textView"
             android:layout_below="@+id/button"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_weight="1" />
 
     </android.support.design.widget.AppBarLayout>
 
