26-28.04.17 Fixed Bag background  - black + крах при не нахождении Города / Улицы Запись в бд [2/2] Добавлена проверкана: Wi-Fi , Internet , Google Play services Fixed visible in authorization + мелкие доработки Добавлено построение кривой пути Добавлена функция "Письмо разработчику" [2/2] Добавлена активити "Найти друга"

--- a/app/src/main/res/menu/activity_main_settings_drawer.xml
+++ b/app/src/main/res/menu/activity_main_settings_drawer.xml
@@ -11,9 +11,16 @@
             android:icon="@drawable/donate"
             android:title="Donate" />
         <item
+            android:id="@+id/email_dev"
+            android:icon="@drawable/email_dev"
+            android:title="Письмо разработчику" />
+        <item
+            android:id="@+id/friend_search"
+            android:icon="@drawable/search"
+            android:title="Найти друга" />
+        <item
             android:id="@+id/About"
             android:icon="@drawable/about"
             android:title="О приложении" />
     </group>
-
 </menu>
