--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -9,7 +9,8 @@
     android:background="@drawable/_fon_authorization"
     tools:context="ru.yellosoft_club.y_gpstracker.authorization">
 
-    <EditText android:layout_width="250dp"
+    <EditText
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:id="@+id/et_email"
         android:hint="Email"
@@ -21,7 +22,8 @@
         android:textColor="#ffffff"
         android:layout_alignStart="@+id/et_password" />
 
-    <EditText android:layout_width="250dp"
+    <EditText
+        android:layout_width="250dp"
         android:layout_height="50dp"
         android:hint="Password"
         android:textColorHint="@color/grey_50"
@@ -32,7 +34,8 @@
         android:layout_below="@+id/et_email"
         android:password="true" />
 
-    <LinearLayout android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:weightSum="1"
@@ -42,14 +45,16 @@
         android:layout_marginLeft="49dp"
         android:layout_marginStart="49dp">
 
-    <Button android:layout_width="144dp"
+    <Button
+        android:layout_width="144dp"
         android:layout_height="match_parent"
         android:text="Вход"
         android:id="@+id/btn_sign_in"
         android:elevation="0dp"
         android:layout_weight="0.19" />
 
-    <Button android:layout_width="137dp"
+    <Button
+        android:layout_width="137dp"
         android:layout_height="wrap_content"
         android:text="Регистрация"
         android:id="@+id/btn_registration"
@@ -66,16 +71,16 @@
         android:gravity="center_horizontal">
 
      <TextView
-          android:text="Loading..."
-          android:layout_height="45dp"
-          android:textSize="30dp"
-          android:textColor="#ffffff"
-          android:id="@+id/textView4"
-          android:layout_marginTop="15dp"
-          android:layout_width="match_parent"
-         android:gravity="center_horizontal"
-         android:cursorVisible="false"
-         android:visibility="invisible" />
+        android:text="Loading..."
+        android:layout_height="45dp"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:id="@+id/textView4"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:gravity="center_horizontal"
+        android:cursorVisible="false"
+        android:visibility="invisible" />
 
     </LinearLayout>
 
