--- a/app/src/main/res/layout/activity_friend_search.xml
+++ b/app/src/main/res/layout/activity_friend_search.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="ru.yellosoft_club.y_gpstracker.main_settings">
+    tools:context="ru.yellosoft_club.y_gpstracker.friend_search">
 
     <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-    <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:layout_weight="1" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
     <LinearLayout
             android:orientation="horizontal"
@@ -26,36 +17,36 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-    <EditText
+     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:hint="Введите Город"
+            android:hint="Введите uid друга"
             android:textColor="#ffffff"
-            android:id="@+id/TFaddress"
+            android:id="@+id/uid"
             android:layout_weight="1" />
 
-    <Button
+      <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Поиск"
-            android:id="@+id/Bsearch"
+            android:id="@+id/search"
             android:layout_gravity="right"
-            android:onClick="onSearch" />
+            android:onClick="SearchClick" />
 
-     <Button
+       <Button
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Вид"
-            android:id="@+id/Btype"
+            android:text="Добавить в друзья"
+            android:id="@+id/add"
             android:layout_gravity="right"
             android:nestedScrollingEnabled="false"
-            android:onClick="changeType" />
-    </LinearLayout>
+            android:onClick="AddClick" />
+        </LinearLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main_settings" />
+    <include layout="@layout/content_main_settings"/>
 
 </android.support.design.widget.CoordinatorLayout>
