--- a/app/src/main/res/layout/activity_friend_search.xml
+++ b/app/src/main/res/layout/activity_friend_search.xml
@@ -7,6 +7,11 @@
     android:fitsSystemWindows="true"
     tools:context="ru.yellosoft_club.y_gpstracker.friend_search">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
